# C2

./: .env.example  .gitignore  README.md  docker-compose.yml  init.sql  requirements.txt
agent/: .env.example  Cargo.toml
agent/src/: executor.rs  http.rs  main.rs  models.rs
app/: __init__.py  config.py  database.py
app/database/: init.sql
app/models/: command.py  user.py
app/routes/: command_routes.py  user_routes.py
app/schemas/: __init__.py  command_schema.py  user_schema.py
app/services/: command_service.py  user_service.py
console/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
console/src/: App.jsx  index.css
console/src/api/: client.js
console/src/components/: CommandForm.jsx  CommandList.jsx  CommandResult.jsx  LogTerminal.jsx
console/src/pages/: Dashboard.jsx  Login.jsx
team-server/: .env.example  main.py  requirements.txt
team-server/app/: auth.py  config.py  ws_manager.py
team-server/app/database/: database.py
team-server/app/enums/: command_status.py
team-server/app/models/: command.py  user.py
team-server/app/routes/: auth_routes.py  command_routes.py
team-server/app/schemas/: command_schema.py
team-server/app/services/: command_service.py
