[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }    # runtime async (comme asyncio en Python)
reqwest = { version = "0.12", features = ["json"] } # HTTP client
serde = { version = "1", features = ["derive"] }   # sérialiser/désérialiser JSON
rand = "0.8"                                        # jitter
